--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   path_provider: ^2.1.4
   image: ^4.5.3
+  firebase_database: ^11.1.1
   
 
 dev_dependencies:
