--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,30 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"proyecto-carro-basurero","appId":"1:835858854447:android:ce5a0b3ccbca3de5688cda","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"proyecto-carro-basurero","configurations":{"android":"1:835858854447:android:ce5a0b3ccbca3de5688cda","ios":"1:835858854447:ios:ee8efc68b0c21159688cda","macos":"1:835858854447:ios:ee8efc68b0c21159688cda","web":"1:835858854447:web:8d53a27fa430b4ea688cda","windows":"1:835858854447:web:c6dfac4ed83e2ad3688cda"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "proyecto-carro-basurero",
+          "appId": "1:835858854447:android:ce5a0b3ccbca3de5688cda",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "proyecto-carro-basurero",
+          "configurations": {
+            "android": "1:835858854447:android:ce5a0b3ccbca3de5688cda",
+            "ios": "1:835858854447:ios:ee8efc68b0c21159688cda",
+            "macos": "1:835858854447:ios:ee8efc68b0c21159688cda",
+            "web": "1:835858854447:web:8d53a27fa430b4ea688cda",
+            "windows": "1:835858854447:web:c6dfac4ed83e2ad3688cda"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions-metadatos"
+    }
+  ]
+}
