--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   path_provider: ^2.1.4
   image: ^4.5.3
   firebase_database: ^11.1.1
+  cloud_functions: ^5.1.0
+  exif: ^3.1.0
+  http: ^1.2.2
+
   
 
 dev_dependencies:
